Fix overflowing video in Views

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3396,6 +3396,11 @@ form#user-login, form#user-pass {
           .views-field-body {
             flex: 1;
             display: flex;
+
+            iframe {
+              max-width: 100%;
+              height: auto;
+            }
           }
         }
 
